# Knapsack-Solver

./: Cargo.toml  Dockerfile.amd64  Dockerfile.arm64  README.md  run-gh-act.sh
.github/workflows/: build-and-test.yml  package-on-tag-push.yml  rust.yml
src/: lib.rs  main.rs  problem.rs
src/client/: cli.rs
